--- a/website/newsletter/204/index.mdx
+++ b/website/newsletter/204/index.mdx
@@ -73,7 +73,7 @@ See also the 🎥 [commented video from Theo](https://www.youtube.com/watch?v=Gj
 - 📜 [Why Gumroad Didn't Choose htmx](https://htmx.org/essays/why-gumroad-didnt-choose-htmx/): Explain why they chose Next.js for their new product.
 - 📜 [React on the server is not PHP](https://www.artmann.co/articles/react-on-the-server-is-not-php)
 - 📦 [StyleX 0.8 - LightningCSS post-processing, theming and linting improvements](https://stylexjs.com/blog/v0.8.0)
-- 📦 [JSX Email 2.0 - config file, plugins, email compat, CSS inlining, new components](https://jsx.email/docs/v2/migration) [https://x.com/shellscape/status/1842292143152574765](https://x.com/shellscape/status/1842292143152574765)
+- 📦 [JSX Email 2.0 - config file, plugins, email compat, CSS inlining, new components](https://jsx.email/docs/v2/migration)
 - 📦 [Framer motion 11.11 - `animate()` can now animate any object such as Object3D from Three.js](https://www.framer.com/motion/animate-function/##objects)
 - 📦 [React-To-Print 3.0 - API modernization, React 19, smaller, Shadow DOM support, improved error handling](https://github.com/MatthewHerbst/react-to-print/blob/master/CHANGELOG.md#300-september-28th-2024)
 - 📦 [Assistant-UI - React Components for AI Chat](https://github.com/Yonom/assistant-ui)
