--- a/website/newsletter/204/index.mdx
+++ b/website/newsletter/204/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /204
-title: "This Week In React #204: React at Meta, React Compiler, React Router, Next.js, StyleX, Mitosis, One, Hermes, BottomTabs, Zeego, Storybook RN, Nitro, TC39, Vite, Deno, Bun, Brisa, Lucia..."
+title: "This Week In React #204: React at Meta, React Compiler, React Router, Next.js, StyleX, Mitosis, One, Hermes, BottomTabs, Zeego, Storybook, Nitro, TC39, Vite, Deno, Bun, Brisa, Lucia..."
 authors: [slorber]
 date: 10-09-2024
 ---
