--- a/website/newsletter/204/index.mdx
+++ b/website/newsletter/204/index.mdx
@@ -7,9 +7,9 @@ date: 10-09-2024
 
 Hi everyone!
 
-It's been another exciting week with cross-platform announcements at the Meta Connect event, with very positive production usage of React Compiler, StyleX, React Strict DOM and Hermes. I'm also excited for the React Compiler to add official support for React 18 and React 17 (experimental).
+It's been another exciting week with great React cross-platform announcements at the Meta Connect event giving positive feedback on the usage of React Compiler, StyleX, React Strict DOM, and Hermes. I'm also excited for the React Compiler to add official support for React 18 and React 17 (experimental).
 
-On the React Native side we also had great releases and announcements, notably a new cross-platform framework from the Tamagui team, Zeego 2, native bottom tabs and RN Storybook 8.
+On the React Native side, we also had great releases and announcements, notably a new cross-platform framework from the Tamagui team, Zeego 2, native bottom tabs, and RN Storybook 8.
 
 In the frontend world, Deno 2.0 just came out, and we also have a very exciting TC39 meeting happening right now.
 
