--- a/website/src/pages/conferences.mdx
+++ b/website/src/pages/conferences.mdx
@@ -60,7 +60,7 @@ Here's how we generally execute this kind of media partnership.
 
 ### What you do
 
-- You print and distribute our [Flyer (A5 format)](https://drive.google.com/drive/folders/14BOT_7pT3zz2IKwQGw93G185kll3nwhJ) in the conference bag
+- You print and distribute our [Flyer (A5 leaflet format)](https://drive.google.com/drive/folders/1tVoR3u5qERjt9hwyNQQMJzax3iYEKcsL) in the conference bag
 - You put our [logo](https://drive.google.com/drive/folders/1029GIVDLUizLhhz0xNAdDlMnPhsQ3_f7) on your homepage with a do-follow backlink (with `?utm_source=<YOUR_CONF_NAME>`)
 - You mention us once in your conference newsletter (with `?utm_source=<YOUR_CONF_NAME>`)
 - You offer discount of at least 10% on tickets with promo code `TWIR`, also useful for tracking
