fix HTML duplicate <a> tag issue due to gfm autolinking

--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -69,7 +69,7 @@ Last updated: **September 2024**.
     <>: </>
     <>email us at </>
     <a href="mailto:sponsor@thisweekinreact.com?subject=Sponsorship">
-      <b>sponsor@thisweekinreact.com</b>
+      <b>{"sponsor@thisweekinreact.com"}</b>
     </a>
     <> or </>
     <a href="https://thisweekinreact.com/sponsor/form">
