--- a/website/newsletter/205/index.mdx
+++ b/website/newsletter/205/index.mdx
@@ -7,6 +7,14 @@ date: 10-16-2024
 
 Hi everyone!
 
+This week we have a major Next.js RC release dropping just before Next.js Conf, many diverse releases, and great interactive blog posts.
+
+The React Native world is quite active too, with many great releases from infrastructure packages you probably rely on. I heard v0.76 stable is around the corner!
+
+Node.js 23 is out, and we have 4 new features ready to be standardized in ES2025!
+
+🙏 The newsletter isn't growing as fast as it used to. I'd really appreciate it if you'd recommend it with your friends and colleagues. You can just forward them this email (or [the online version link](https://thisweekinreact.com/newsletter/205)), and they'll decide if it's worth subscribing to. Thanks!
+
 <!-- truncate -->
 
 **💡 [Check this newsletter on Twitter](https://slo.im/thread) - visual format 🎨**
